# xndarr

./: .gitignore  README.md
benchmark/micro/bench1/: Makefile  bench.cpp
benchmark/micro/bench2/: bench.cpp
benchmark/micro/bench3/: bench.cpp
src/: CMakeLists.txt  main.cpp
src/include/: common.hpp  ndarray.cpp  ndarray.hpp  operations.hpp  scalar.hpp  static_vector.cpp  static_vector.hpp  vecexpr.cpp  vecexpr.hpp  xndarr.hpp
src/include/simd/: common.hpp  simd.hpp
src/xndarr/: xndarr.hpp
src/xndarr/container/: static_vector.cpp  static_vector.hpp
src/xndarr/expression/: operations.hpp  vecexpr.cpp  vecexpr.hpp
src/xndarr/simd/: simd.hpp  simd_common.hpp
